--- a/RNN-batch.ipynb
+++ b/RNN-batch.ipynb
@@ -5,34 +5,38 @@
    "metadata": {},
    "source": [
     "# Recurrent Neural Networks\n",
+    "\n",
     "So far, the neural network architectures we have been using take in a single fixed size input and give a single fixed size output. What if we wanted to model something like language where we want to feed in different length words or sentences? Another issue is that each output is only dependent on the current input. It has no 'memory' of previous inputs so you can't model time dependent variables. Recurrent neural networks address both these issues.\n",
     "\n",
-    "They do this by having an internal hidden state which can be thought of as a form of memory. At each time step, the new hidden state is calculated as a function of the previous hidden state and the current input. This hidden state can then be used to represent your output or can be put through another function to compute the outputs. When we say function we are referring to the same one used in standard neural network: linear combination followed by an activation function.\n",
+    "They do this by having an internal hidden state which can be thought of as a form of memory. At each time step, the new hidden state (h) is calculated as a function of the previous hidden state and the current input (x). This hidden state can then be used to represent your output or can be put through another transformation to compute the outputs (y).\n",
     "\n",
-    "### $h_t = f(x_t, h_{t-1})$\n",
+    "The left diagram below shows how we represent a RNN whereas the right one shows a RNN which has been \"unrolled\" over time so we see the value of each variable at successive time steps.\n",
     "\n",
-    "As shown in the diagram below, which uses a further function to compute the output $o$ from the hidden state $s$, there are three matrices of parameters which we are trying to optimize: U, V and W. The diagram also demonstrates how these networks can be unfolded to show the variables at various time steps.\n",
+    "![image](images/RNN_basic.JPG)\n",
     "\n",
-    "![image](images/rnn.jpg)\n",
+    "The diagram below shows the actual matrix representation of each of the variables in the RNN. Instead of doing two separate matrix multiplications on the input and previous hidden state to calculate the next hidden state, we can concatenate those two variables into  single I vector and W matrix\n",
+    "\n",
+    "![image](images/RNN_matrices.JPG)\n",
+    "\n",
+    "There is also an alternative way of visually representing the RNN which lets us see how similar it is to a fully connected network.\n",
+    "\n",
+    "![image](images/RNN_other_rep.JPG)\n",
     "\n",
     "Standard neural networks can only model one to one relationships while RNNs are extremely flexible in terms of input-output structures which is one of the reasons they are so powerful. You can imagine something like one to many being used to feed in a single image from which a caption is sequentially produced or a many to one being used to feed in a sentence sequentially and give a single output describing the sentiment of the sentence.\n",
     "\n",
-    "![image](images/rnnlayouts.jpeg)\n",
+    "![image](images/RNN_layouts.JPG)\n",
+    "Source: http://karpathy.github.io/2015/05/21/rnn-effectiveness/\n",
     "\n",
     "### Optimization\n",
     "Surprisingly, with this increased complexity in structure, the optimization method does not become any more difficult. Despite having a different name, back-propagation through time, it is essentially the same thing. All you do is feed in your sequence sequentially to get the output, as usual. You then just calculate your error at each timestep and sum it as opposed to calculating the error at a single timestep like standard neural networks. Then you can use gradient descent to update your weights iteratively until you are satisfied with your network's performance.\n",
     "\n",
-    "RNNS are generally slower to optimize than standard neural networks as the output at each time step is dependent on the previous output so the operations cannot be parallelized.\n",
+    "![image](images/RNN_BPTT.JPG)\n",
     "\n",
-    "For a long time it was considered difficult to train RNNs due to two problems called vanishing and exploding gradients. These problems also exist in standard neural network but are greatly emphasized in RNNs. However, modern techniques such as LSTM cells have greatly reduced this difficulty."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this particular task, we will need to do quite a bit of pre-processing. We need to find the number of unique characters in our training text and give each one a unique number so we can one-hot encode them.<br>\n",
-    "We start by reading the file, converting all letters to lowercase to reduce the number of characters we need to model, then defining a function which takes in the text and gives up back a dictionary mapping each letter to a unique number."
+    "RNNS are generally slower to optimize than standard neural networks as the output at each time step is dependent on the previous output so the operations cannot be parallelized.\n",
+    "![image](images/RNN_parallel.JPG)\n",
+    "\n",
+    "For a long time it was considered difficult to train RNNs due to two problems called vanishing and exploding gradients. These problems also exist in standard neural network but are greatly emphasized in RNNs. However, modern techniques such as LSTM cells have greatly reduced this difficulty.\n",
+    "![image](images/RNN_gradient.JPG)"
    ]
   },
   {
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +168,7 @@
     "batch_size = 32\n",
     "chunk_size = 100 #the length of the sequences which we will optimize over\n",
     "\n",
-    "train_data = CharRNNDataset('lyrics.txt', chunk_size=100, transform=ToLongTensor())\n",
+    "train_data = CharRNNDataset('lyrics2.txt', chunk_size=100, transform=ToLongTensor())\n",
     "x, y = train_data[0]\n",
     "print('First input', x)\n",
     "print('First label', y, '\\n')\n",
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +205,13 @@
     "        self.hidden_size = hidden_size\n",
     "        self.encoder = torch.nn.Embedding(input_size, input_size)\n",
     "        self.i2h = torch.nn.Linear(input_size + hidden_size, hidden_size)\n",
-    "        self.i2o = torch.nn.Linear(hidden_size, output_size)\n",
+    "        self.h2o = torch.nn.Linear(hidden_size, output_size)\n",
     "\n",
     "    def forward(self, x, hidden):\n",
     "        embedding = self.encoder(x) #encode our input into a vector embedding\n",
     "        combined = torch.cat((embedding, hidden), 1)\n",
     "        hidden = torch.tanh(self.i2h(combined))\n",
-    "        output = self.i2o(hidden)\n",
+    "        output = self.h2o(hidden)\n",
     "        output = F.log_softmax(output, dim=1)\n",
     "        return output, hidden\n",
     "\n",
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +290,15 @@
     "        epoch_loss /= len(train_loader.dataset) #divide by the number of chunks per epoch to get average cost per epoch\n",
     "\n",
     "        print('Epoch ', epoch+1, ' Avg Loss: ', epoch_loss)\n",
-    "        print('Generated text: ', generatedstrings[np.random.randint(0, batch_size)][0:750], '\\n')\n",
-    "        \n",
+    "        print('Generated text: ', generatedstrings[np.random.randint(0, batch_size)][0:750], '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train(myrnn, epochs)"
    ]
   },
@@ -300,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,10 +348,24 @@
     "        \n",
     "        x = torch.LongTensor([sample])\n",
     "    \n",
-    "    return generated\n",
-    "        \n",
+    "    return generated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gen = generate(myrnn, 'this be ', 2000, 0.75)\n",
     "print(gen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using PyTorch's built in RNN module"
    ]
   },
   {
@@ -404,52 +429,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen = generate(myrnn, 'this be ', 2000, 0.75)\n",
+    "print(gen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LSTM in PyTorch\n",
+    "\n",
+    "Only two things change from the above example to use an LSTM instead. Firstly, use torch.nn.LSTM instead of torch.nn.RNN when defining our model. Secondly, we change the init_hidden function so it return an extra matrix of 0s as the LSTM not only has a hidden state but also a cell state which needs to be initialized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CharLSTM(torch.nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, n_layers=1):\n",
+    "        super().__init__()\n",
+    "        #store input parameters in the object so we can use them later on\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.output_size = output_size\n",
+    "        self.n_layers = n_layers\n",
+    "\n",
+    "        #required functions for model\n",
+    "        self.encoder = torch.nn.Embedding(input_size, input_size)\n",
+    "        self.rnn = torch.nn.LSTM(input_size, hidden_size, n_layers, batch_first=True)\n",
+    "        self.decoder = torch.nn.Linear(hidden_size, output_size)\n",
+    "\n",
+    "    def forward(self, x, hidden):\n",
+    "        embedding = self.encoder(x.view(-1)) #encode our input into a vector embedding\n",
+    "        output, hidden = self.rnn(embedding.view(-1, 1, self.input_size), hidden) #calculate the output from our rnn based on our input and previous hidden state\n",
+    "        output = self.decoder(output.view(-1, self.hidden_size)) #calculate our output based on output of rnn\n",
+    "        output = F.log_softmax(output, dim=1)\n",
+    "        return output, hidden\n",
+    "\n",
+    "    def init_hidden(self, x):\n",
+    "        return (torch.zeros(self.n_layers, x.shape[0], self.hidden_size),\n",
+    "                torch.zeros(self.n_layers, x.shape[0], self.hidden_size)) #initialize our hidden and cell state to a matrix of 0s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hyper-params\n",
+    "lr = 0.001\n",
+    "epochs = 50\n",
+    "\n",
+    "myrnn = CharLSTM(nchars, 512, nchars) #instantiate our model from the class defined earlier\n",
+    "criterion = torch.nn.NLLLoss() #define our cost function\n",
+    "optimizer = torch.optim.Adam(myrnn.parameters(), lr=lr) #choose optimizer\n",
+    "\n",
+    "# SET UP TRAINING VISUALISATION\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "writer = SummaryWriter() # we will use this to show our models performance on a graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this be years\n",
-      "and forkid.\"t, coll shit without a bid freat spick off me, byouch tas aye\n",
+      "Epoch  1  Avg Loss:  3.936492918511404\n",
+      "Generated text:  6w6//s/w;rwwwwww/wwwwwggwgo6w(666gw6psw//w69sw//r///“wb//www666gws(w/(wgwwrgowrgw6gwwwww/rw6nbw6gwgwwwrww/     wowws wwwo//w gohw rrrr wow  wo w 6wb  /owwuwwwo /on   wowwuwwwwoo  w roo/o gwo w 6wb  /ou  r w      w    w         oo   o   w     ow   g w                 u        u                    wouh w                                              w uu                                               n                                                                                                                                                                                                                                                                                                           n                                                  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(myrnn, epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this be userick\n",
+      "show me something natural like ass with some stretch marks\n",
+      "still will take you down right on your mamma's couch in polo socks, aye\n",
+      "this shit way too crazy, aye\n",
       "you do not amaze me, aye\n",
-      "i blew me away, you think more beauty in blue green and grey\n",
-      "all my solomon up north, 12 years a slave\n",
-      "12 years of age, thinkin’ my shade tho sheterr\n",
-      "dount don't want to self-destruct\n",
-      "the evils of lucy was all around me\n",
-      "so i well of me marain took my stage, i'm the sandman (sandman)\n",
-      "get the fuck off my stage, i'm the sandman (sandman)\n",
-      "get the fuck off my stage, i'm the sandman (sandman)\n",
-      "get the fuck off my stage, i'm the realest nigga, my fiers, new, i got winners on the way\n",
-      "you ain't never gotta say shit, uh\n",
-      "and i know your taste is, a little bit hmm, high maintenance, uh\n",
-      "everybody else basic, you live life on an everyday basis\n",
-      "with poetic justice, poetic justice\n",
-      "if i told you that a flower bloomed in a dark room, would you trust it?\n",
-      "i mean you need to hear this, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirror, love is not just a verb\n",
-      "it's you looking in the mirr, know just, know just, know just, know just, know just what you want\n",
-      "poetic justice, put it in a sook, pound me, \"you remember you was conflicted, misusing your influence\n",
+      "i blew cool from ac, aye\n",
+      "obama just paged me, aye\n",
+      "i don't fabricate it, aye\n",
+      "most of ya'll be faking, aye\n",
+      "i stay modest bout it, aye\n",
+      "she elaborate it, aye\n",
+      "this that grey poupon, that evian, that ted talk, aye\n",
+      "watch my soul speak, you let the meds talk, aye\n",
+      "if i kill a nigga it won't be the alcohol, aye\n",
+      "i'm the realest nigga after all, bitch be humble\n",
       "\n",
-      "[introbe myself, i no longer need cupid\n",
-      "and forcin’ my dark side like a young george lucas\n",
-      "light don’t mean you smart, bein’ dark don’t make you stupid\n",
-      "and frame of mind for them bustas, ain’t talkin’ “woohah!”\n",
-      "need a paradox for the pair of dots they tutored\n",
-      "like two ties, l-l, you lose two times\n",
-      "if you don’t see you beautiful in your complexion\n",
-      "it ain’t complex to put it in context\n",
-      "find the air beneath the kite, that’s the context\n",
-      "yeah, baby\n"
+      "(hol' up bitch) sit down,\n",
+      "(hol' up lil bitch, hol' up, lil bitch) be humble\n",
+      "(hol' up bitch) sit down (hol' up sit down lil bitch)\n",
+      "(sit down lil bitch) be humble\n",
+      "(hol' up, hol' up, hol' up, hol' up lil bitch) sit down\n",
+      "(hol' up lil bitch) be humble\n",
+      "(hol' up bitch) sit down\n",
+      "(hol' up, hol' up, hol' up, hol' up) be humble\n",
+      "(hol' up, hol' up, hol' up, hol' up lil bitch) bitch, sit down\n",
+      "(hol' up lil bitch) be humble\n",
+      "(hol' up bitch) sit down\n",
+      "(hol' up, hol' up, hol' up, hol' up) be humble\n",
+      "(hol' up, hol' up, hol' up, hol' up lil bitch) sit down\n",
+      "(hol' up lil bitch) be humble\n",
+      "(hol' up bitch) sit down\n",
+      "(hol' up, hol' up, hol' up, hol' up) be humble\n",
+      "(hol' up, hol' up, hol' up, hol' up lil bitch) sit down\n",
+      "(hol' up lil bitch) be humble\n",
+      "(hol' up bitch) sit down\n",
+      "(hol' up, hol' up, hol' up, hol' up) be humble\n",
+      "(hol' up, hol' up, hol' up, hol' up lil bitch) bitch, sit down\n",
+      "(hol' up lil bitch) be humble\n",
+      "(hol' up bitch) sit down\n",
+      "(hol' up, hol' up, hol' up, hol' up)\n",
+      "\n",
+      "who dat nigga thinking that he fronting on man man (man man)\n",
+      "get the fuck off my stage, i'm the sandman (sandman)\n",
+      "get the fuck off my dick, that ain't right\n",
+      "i make a play fucking up your whole life\n",
+      "i'm so fucking sick and tired of the photoshop\n",
+      "show me something natural like afro on richard pryor\n",
+      "show me something natural like ass with some stretch marks\n",
+      "sindon, they bet me talk my stu scott, ‘scuse me on my 2pac\n",
+      "keep your head up, when did you stop? love and die\n",
+      "color of your skin, color of y\n"
      ]
     }
    ],
@@ -457,27 +583,6 @@
     "gen = generate(myrnn, 'this be ', 2000, 0.75)\n",
     "print(gen)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
