fixed loss function

--- a/Recurrent Neural Networks Solution.ipynb
+++ b/Recurrent Neural Networks Solution.ipynb
@@ -183,7 +183,6 @@
     "        combined = torch.cat((embedding, hidden), 1) #concatenate embedding and hidden to create I vector\n",
     "        hidden = torch.tanh(self.i2h(combined)) #apply linear layer and activation function to calculate hidden state value\n",
     "        output = self.h2y(hidden) #calculate output from hidden state\n",
-    "        output = F.log_softmax(output, dim=1) #apply log softmax activation to output\n",
     "        return output, hidden\n",
     "\n",
     "    def init_hidden(self, x):\n",
@@ -210,7 +209,7 @@
     "hidden_size = 128\n",
     "\n",
     "myRNN = CharRNN(nchars, embedding_len, hidden_size, nchars) #instantiate the model from the class defined earlier\n",
-    "criterion = torch.nn.NLLLoss() #define cost function - Negative Log Likelihood\n",
+    "criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myRNN.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
@@ -361,7 +360,6 @@
     "        embedding = self.encoder(x.view(-1)) #encode our input into a vector embedding\n",
     "        output, hidden = self.rnn(embedding.view(-1, 1, self.embedding_len), hidden) #calculate the output from our rnn based on our input and previous hidden state\n",
     "        output = self.decoder(output.view(-1, self.hidden_size)) #calculate output based on output of rnn\n",
-    "        output = F.log_softmax(output, dim=1) #apply log softmax activation\n",
     "        return output, hidden\n",
     "\n",
     "    def init_hidden(self, x):\n",
@@ -381,7 +379,7 @@
     "hidden_size = 128\n",
     "\n",
     "myRNN = CharRNN(nchars, embedding_len, hidden_size, nchars) #instantiate our model from the class defined earlier\n",
-    "criterion = torch.nn.NLLLoss() #define cost function\n",
+    "criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myrnn.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
@@ -448,7 +446,6 @@
     "        embedding = self.encoder(x.view(-1)) #encode our input into a vector embedding\n",
     "        output, hidden = self.rnn(embedding.view(-1, 1, self.embedding_len), hidden) #calculate the output from our rnn based on our input and previous hidden state\n",
     "        output = self.decoder(output.view(-1, self.hidden_size)) #calculate our output based on output of rnn\n",
-    "        output = F.log_softmax(output, dim=1)\n",
     "        return output, hidden\n",
     "\n",
     "    def init_hidden(self, x):\n",
@@ -469,7 +466,7 @@
     "hidden_size = 128\n",
     "\n",
     "myLSTM = CharLSTM(nchars, embedding_len, hidden_size, nchars) #instantiate our model from the class defined earlier\n",
-    "criterion = torch.nn.NLLLoss() #define our cost function\n",
+    "criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myrnn.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
