--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -180,7 +180,6 @@
     "        combined = #concatenate embedding and hidden to create I vector\n",
     "        hidden = #apply linear layer and activation function to calculate hidden state value\n",
     "        output =  #calculate output from hidden state\n",
-    "        output =  #apply log softmax activation to output\n",
     "        return output, hidden\n",
     "\n",
     "    def init_hidden(self, x):\n",
@@ -207,7 +206,7 @@
     "hidden_size = 128\n",
     "\n",
     "myRNN =  #instantiate the model from the class defined earlier\n",
-    "criterion = #define cost function - Negative Log Likelihood\n",
+    "criterion = #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myRNN.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
@@ -358,7 +357,6 @@
     "        embedding =  #encode our input into a vector embedding\n",
     "        output, hidden =  #calculate the output from our rnn based on our input and previous hidden state\n",
     "        output =  #calculate output based on output of rnn\n",
-    "        output =  #apply log softmax activation\n",
     "        return output, hidden\n",
     "\n",
     "    def init_hidden(self, x):\n",
@@ -378,7 +376,7 @@
     "hidden_size = 128\n",
     "\n",
     "myRNN = CharRNN(nchars, embedding_len, hidden_size, nchars) #instantiate our model from the class defined earlier\n",
-    "criterion = torch.nn.NLLLoss() #define cost function\n",
+    "criterion = #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myrnn.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
@@ -445,7 +443,6 @@
     "        embedding = self.encoder(x.view(-1)) #encode our input into a vector embedding\n",
     "        output, hidden = self.rnn(embedding.view(-1, 1, self.embedding_len), hidden) #calculate the output from our rnn based on our input and previous hidden state\n",
     "        output = self.decoder(output.view(-1, self.hidden_size)) #calculate our output based on output of rnn\n",
-    "        output = F.log_softmax(output, dim=1)\n",
     "        return output, hidden\n",
     "\n",
     "    def init_hidden(self, x):\n",
@@ -465,7 +462,7 @@
     "hidden_size = 128\n",
     "\n",
     "myLSTM = CharLSTM(nchars, embedding_len, hidden_size, nchars) #instantiate our model from the class defined earlier\n",
-    "criterion = torch.nn.NLLLoss() #define our cost function\n",
+    "criterion = #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myrnn.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
