--- a/Recurrent Neural Networks Solution.ipynb
+++ b/Recurrent Neural Networks Solution.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
     "        self.transform = transform\n",
     "        \n",
     "        #open our text file and read all the data into the rawtxt variable\n",
-    "        with open('lyrics.txt', 'r') as file:\n",
+    "        with open(txt_file_path, 'r') as file:\n",
     "            rawtxt = file.read()\n",
     "\n",
     "        #turn all of the text into lowercase as it will reduce the number of characters that our algorithm needs to learn\n",
@@ -99,7 +99,7 @@
     "        self.X = np.array(txt) #convert txt to numpy array\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return len(self.X)-1-self.chunk_size #the number of datapoints we have based on the chunk size and X\n",
+    "        return len(self.X)-self.chunk_size #the number of datapoints we have based on the chunk size and X\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
     "        x = self.X[idx:idx+self.chunk_size] #get the chunk at the particular index\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "batch_size = 32\n",
     "chunk_size = 150 #the length of the sequences which we will optimize over\n",
     "\n",
-    "train_data = CharRNNDataset('lyrics.txt', chunk_size=chunk_size, transform=ToLongTensor()) #instantiate dataset from class defined above\n",
+    "train_data = CharRNNDataset('Data/lyrics.txt', chunk_size=chunk_size, transform=ToLongTensor()) #instantiate dataset from class defined above\n",
     "x, y = train_data[0]\n",
     "print('First input', x)\n",
     "print('First label', y, '\\n')\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "hidden_size = 128\n",
     "\n",
     "myRNN = CharRNN(nchars, embedding_len, hidden_size, nchars) #instantiate the model from the class defined earlier\n",
-    "criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
+    "#criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myRNN.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
