changed title of LSTM section

--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -407,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LSTM\n",
+    "## How can we overcome the shortcomings of RNNs (unparallelisable training and vanishing gradient)?\n",
     "\n",
     "![image](images/RNN_LSTM.JPG)\n",
     "\n",
@@ -506,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
