--- a/Recurrent Neural Networks Solution.ipynb
+++ b/Recurrent Neural Networks Solution.ipynb
@@ -209,7 +209,7 @@
     "hidden_size = 128\n",
     "\n",
     "myRNN = CharRNN(nchars, embedding_len, hidden_size, nchars) #instantiate the model from the class defined earlier\n",
-    "#criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
+    "criterion = torch.nn.CrossEntropyLoss() #define cost function - Cross Entropy\n",
     "optimizer = torch.optim.Adam(myRNN.parameters(), lr=lr) #choose optimizer\n",
     "\n",
     "# SET UP TRAINING VISUALISATION\n",
@@ -301,7 +301,7 @@
     "    h = model.init_hidden(x) #initialize hidden state\n",
     "    \n",
     "    for i in range(x.shape[1]-1): #for each input character except the last\n",
-    "        out, h = model.forward(x[:, i], h) #feed that character into the network\n",
+    "        out, h = model.forward(x[:, i], h) #feed that character into the network (prime hidden state)\n",
     "    \n",
     "    x = x[:, -1] #get the last letter\n",
     "    for i in range(str_len): #for each character we want to generate\n",
@@ -410,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LSTM\n",
+    "## How can we overcome the shortcomings of RNNs (unparallelisable training and vanishing gradient)?\n",
     "\n",
     "![image](images/RNN_LSTM.JPG)\n",
     "\n",
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
